[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_lorcan_hamill"
dynamic = [
    "version"
]
authors = [
  { name="Lorcan Hamill", email="lorcan@lorcanhamill.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.version]
path = "src/example_package_lorcan_hamill/__about__.py"

[project.urls]
Homepage = "https://github.com/LorcanHamill/packaging_tutorial"
Issues = "https://github.com/LorcanHamill/packaging_tutorial/issues"
